tests/cases_invalid/expressions/empty/.expected
error: expected expression
 --> ./cases_invalid/expressions/empty/main.shd:1:13
  |
1 | buf value = ;
  |             ^ here
  |
